# load-balancer

./: Cargo.toml  README.md  backend_server.rs  config.json  start_backends.sh  test_load_balancer.sh
src/: health_check.rs  load_balancer.rs  main.rs
src/load_balancer/: service.rs
