[package]
name = "load-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
dashmap = "5.4.0"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
http = "0.2"
bytes = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
